// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generation eval golden snapshots chunk_clean_stays_ok 1`] = `
{
  "duplicateRepairs": 0,
  "repairNotes": [],
  "sessionsOut": [
    {
      "coolDown": undefined,
      "exercises": [
        {
          "exerciseId": "u1",
          "name": "Press",
          "notes": undefined,
          "prescriptionType": undefined,
          "primaryMuscleGroup": undefined,
          "reps": 8,
          "secondaryMuscleGroups": [],
          "sets": 3,
        },
        {
          "exerciseId": "c0_1",
          "name": "c01",
          "notes": undefined,
          "prescriptionType": undefined,
          "primaryMuscleGroup": undefined,
          "reps": 8,
          "secondaryMuscleGroups": [],
          "sets": 3,
        },
        {
          "exerciseId": "c0_2",
          "name": "c02",
          "notes": undefined,
          "prescriptionType": undefined,
          "primaryMuscleGroup": undefined,
          "reps": 8,
          "secondaryMuscleGroups": [],
          "sets": 3,
        },
        {
          "exerciseId": "c0_3",
          "name": "c03",
          "notes": undefined,
          "prescriptionType": undefined,
          "primaryMuscleGroup": undefined,
          "reps": 8,
          "secondaryMuscleGroups": [],
          "sets": 3,
        },
      ],
      "name": "Upper",
      "reasoning": undefined,
      "warmUp": undefined,
      "weekIndex": 1,
      "weekday": "Monday",
    },
    {
      "coolDown": undefined,
      "exercises": [
        {
          "exerciseId": "l1",
          "name": "Squat",
          "notes": undefined,
          "prescriptionType": undefined,
          "primaryMuscleGroup": undefined,
          "reps": 8,
          "secondaryMuscleGroups": [],
          "sets": 3,
        },
        {
          "exerciseId": "c1_1",
          "name": "c11",
          "notes": undefined,
          "prescriptionType": undefined,
          "primaryMuscleGroup": undefined,
          "reps": 8,
          "secondaryMuscleGroups": [],
          "sets": 3,
        },
        {
          "exerciseId": "c1_2",
          "name": "c12",
          "notes": undefined,
          "prescriptionType": undefined,
          "primaryMuscleGroup": undefined,
          "reps": 8,
          "secondaryMuscleGroups": [],
          "sets": 3,
        },
        {
          "exerciseId": "c1_3",
          "name": "c13",
          "notes": undefined,
          "prescriptionType": undefined,
          "primaryMuscleGroup": undefined,
          "reps": 8,
          "secondaryMuscleGroups": [],
          "sets": 3,
        },
      ],
      "name": "Lower",
      "reasoning": undefined,
      "warmUp": undefined,
      "weekIndex": 1,
      "weekday": "Tuesday",
    },
    {
      "coolDown": undefined,
      "exercises": [
        {
          "exerciseId": "u2",
          "name": "Row",
          "notes": undefined,
          "prescriptionType": undefined,
          "primaryMuscleGroup": undefined,
          "reps": 8,
          "secondaryMuscleGroups": [],
          "sets": 3,
        },
        {
          "exerciseId": "c2_1",
          "name": "c21",
          "notes": undefined,
          "prescriptionType": undefined,
          "primaryMuscleGroup": undefined,
          "reps": 8,
          "secondaryMuscleGroups": [],
          "sets": 3,
        },
        {
          "exerciseId": "c2_2",
          "name": "c22",
          "notes": undefined,
          "prescriptionType": undefined,
          "primaryMuscleGroup": undefined,
          "reps": 8,
          "secondaryMuscleGroups": [],
          "sets": 3,
        },
        {
          "exerciseId": "c2_3",
          "name": "c23",
          "notes": undefined,
          "prescriptionType": undefined,
          "primaryMuscleGroup": undefined,
          "reps": 8,
          "secondaryMuscleGroups": [],
          "sets": 3,
        },
      ],
      "name": "Upper 2",
      "reasoning": undefined,
      "warmUp": undefined,
      "weekIndex": 1,
      "weekday": "Thursday",
    },
    {
      "coolDown": undefined,
      "exercises": [
        {
          "exerciseId": "l2",
          "name": "Hinge",
          "notes": undefined,
          "prescriptionType": undefined,
          "primaryMuscleGroup": undefined,
          "reps": 8,
          "secondaryMuscleGroups": [],
          "sets": 3,
        },
        {
          "exerciseId": "c3_1",
          "name": "c31",
          "notes": undefined,
          "prescriptionType": undefined,
          "primaryMuscleGroup": undefined,
          "reps": 8,
          "secondaryMuscleGroups": [],
          "sets": 3,
        },
        {
          "exerciseId": "c3_2",
          "name": "c32",
          "notes": undefined,
          "prescriptionType": undefined,
          "primaryMuscleGroup": undefined,
          "reps": 8,
          "secondaryMuscleGroups": [],
          "sets": 3,
        },
        {
          "exerciseId": "c3_3",
          "name": "c33",
          "notes": undefined,
          "prescriptionType": undefined,
          "primaryMuscleGroup": undefined,
          "reps": 8,
          "secondaryMuscleGroups": [],
          "sets": 3,
        },
      ],
      "name": "Lower 2",
      "reasoning": undefined,
      "warmUp": undefined,
      "weekIndex": 1,
      "weekday": "Friday",
    },
  ],
  "upperLowerPatternRepairs": 0,
  "validation": {
    "crossSessionOverlapExerciseIds": [],
    "duplicateExerciseIds": [],
    "issues": [],
    "nonAnchorSlotOneExerciseIds": [],
    "ok": true,
    "patternClashExerciseIds": [],
    "patternOverflowExerciseIds": [],
    "subMuscleOverflowExerciseIds": [],
  },
}
`;

exports[`generation eval golden snapshots chunk_hybrid_goal_appends_cardio_finisher 1`] = `
{
  "duplicateRepairs": 0,
  "repairNotes": [],
  "sessionsOut": [
    {
      "coolDown": undefined,
      "exercises": [
        {
          "exerciseId": "bench",
          "name": "Bench",
          "notes": undefined,
          "prescriptionType": undefined,
          "primaryMuscleGroup": undefined,
          "reps": 8,
          "secondaryMuscleGroups": [],
          "sets": 3,
        },
        {
          "exerciseId": "inc",
          "name": "Incline",
          "notes": undefined,
          "prescriptionType": undefined,
          "primaryMuscleGroup": undefined,
          "reps": 8,
          "secondaryMuscleGroups": [],
          "sets": 3,
        },
        {
          "exerciseId": "row",
          "name": "Row",
          "notes": undefined,
          "prescriptionType": undefined,
          "primaryMuscleGroup": undefined,
          "reps": 10,
          "secondaryMuscleGroups": [],
          "sets": 3,
        },
        {
          "exerciseId": "pd",
          "name": "Pressdown",
          "notes": undefined,
          "prescriptionType": undefined,
          "primaryMuscleGroup": undefined,
          "reps": 10,
          "secondaryMuscleGroups": [],
          "sets": 3,
        },
      ],
      "name": "Chest",
      "reasoning": undefined,
      "warmUp": undefined,
      "weekIndex": 0,
      "weekday": "Monday",
    },
  ],
  "upperLowerPatternRepairs": 0,
  "validation": {
    "crossSessionOverlapExerciseIds": [],
    "duplicateExerciseIds": [],
    "issues": [],
    "nonAnchorSlotOneExerciseIds": [],
    "ok": true,
    "patternClashExerciseIds": [],
    "patternOverflowExerciseIds": [],
    "subMuscleOverflowExerciseIds": [],
  },
}
`;

exports[`generation eval golden snapshots chunk_hybrid_goal_appends_cardio_finisher 2`] = `
{
  "sessionsEnriched": [
    {
      "coolDown": "2–5 minutes of easy walking or light cycling, then brief static stretching for the muscles you trained.",
      "exercises": [
        {
          "exerciseId": "bench",
          "name": "Bench",
          "notes": undefined,
          "prescriptionType": "reps",
          "primaryMuscleGroup": "Chest",
          "reps": 6,
          "secondaryMuscleGroups": [],
          "sets": 4,
        },
        {
          "exerciseId": "inc",
          "name": "Incline",
          "notes": undefined,
          "prescriptionType": "reps",
          "primaryMuscleGroup": "Chest",
          "reps": 8,
          "secondaryMuscleGroups": [],
          "sets": 4,
        },
        {
          "exerciseId": "row",
          "name": "Row",
          "notes": undefined,
          "prescriptionType": "reps",
          "primaryMuscleGroup": "Back",
          "reps": 8,
          "secondaryMuscleGroups": [],
          "sets": 4,
        },
        {
          "exerciseId": "pd",
          "name": "Pressdown",
          "notes": undefined,
          "prescriptionType": "reps",
          "primaryMuscleGroup": "Arms",
          "reps": 10,
          "secondaryMuscleGroups": [],
          "sets": 3,
        },
        {
          "exerciseId": "cardio_treadmill",
          "name": "Treadmill Walk",
          "notes": "Short steady-state finisher (~8–12 min easy effort). Skip on a busy day if you prefer.",
          "prescriptionType": "time",
          "primaryMuscleGroup": "Cardio",
          "reps": 600,
          "secondaryMuscleGroups": [],
          "sets": 1,
        },
      ],
      "name": "Chest",
      "reasoning": "We added a short, easy cardio finisher for your hybrid-style goal. Skip it when you are short on time.",
      "warmUp": "After a general warm-up, take 2–3 light ramp sets toward working weight on Bench. 5–8 minutes of light movement and dynamic mobility.",
      "weekIndex": 0,
      "weekday": "Monday",
    },
  ],
  "validationAfterEnrich": {
    "crossSessionOverlapExerciseIds": [],
    "duplicateExerciseIds": [],
    "issues": [],
    "nonAnchorSlotOneExerciseIds": [],
    "ok": true,
    "patternClashExerciseIds": [],
    "patternOverflowExerciseIds": [],
    "subMuscleOverflowExerciseIds": [],
  },
}
`;
